2018-03-26  Carl Hetherington  <cth@carlh.net>

	* Add time axis to audio analysis (part of #1082).

	* Note: from this point in the ChangeLog release versions
	are marked using git tags and not written to the ChangeLog.

2018-03-25  Carl Hetherington  <cth@carlh.net>

	* Version 2.13.2 released.

2018-03-24  Carl Hetherington  <cth@carlh.net>

	* Fix crash when changing DCP audio channel count (#1253).

	* Fix update checker error when there is no test
	version.

	* Updated fr_FR translation from Thierry Journet.

2018-03-22  Carl Hetherington  <cth@carlh.net>

	* Add space shortcut to start/stop playback, arrows to go
	back/forward one frame and Ctrl-T to open timeline (#1201).

2018-03-22  Carl Hetherington  <cth@carlh.net>

	* Allow CPL selection in player (#1239).

	* Add hint about making a DCP with a very different frame rate
	to the content.

2018-03-21  Carl Hetherington  <cth@carlh.net>

	* Updated nl_NL translation from Rob van Nieuwkerk.

2018-03-19  Carl Hetherington  <cth@carlh.net>

	* Version 2.11.78 released.

2018-03-16  Carl Hetherington  <cth@carlh.net>

	* Version 2.11.77 released.

2018-03-16  Carl Hetherington  <cth@carlh.net>

	* Version 2.11.76 released.

	* Updated de_DE translation from Carsten Kurz.

	* Version 2.12.1 released.

2018-03-22  Carl Hetherington  <cth@carlh.net>

	* Version 2.12.0 released.

2018-03-22  Carl Hetherington  <cth@carlh.net>

	* Version 2.11.79 released.

2018-03-21  Carl Hetherington  <cth@carlh.net>

	* Updated nl_NL translation from Rob van Nieuwkerk.

2018-03-19  Carl Hetherington  <cth@carlh.net>

	* Better error when loading a non-certificate as a certificate.

	* Very basic DCP verification option in the player.

2018-03-07  Carl Hetherington  <cth@carlh.net>

	* Fix bad DCPs when re-making in encrypted projects (#1232).

2018-03-02  Carl Hetherington  <cth@carlh.net>

	* Fix bad Prores exports in some cases (#1227).

2018-02-27  Carl Hetherington  <cth@carlh.net>
